--- a/src/components/ChatRoom/chatRoom.css
+++ b/src/components/ChatRoom/chatRoom.css
@@ -25,7 +25,7 @@
   color: rgb(0, 153, 46)
 }
 
-.Inactive{
+.inactive{
   color: rgb(223, 1, 1)
 }
     
@@ -48,7 +48,9 @@
     max-width:200px}
   
   .chatroom .chats .chat.right{
-    float:right;clear:both}
+    float:right;clear:both;
+    background-color: rgb(255, 231, 163) !important
+  }
     
     
   .chatroom .input{height:7vh;
