--- a/src/components/ChatRoom/chatRoom.css
+++ b/src/components/ChatRoom/chatRoom.css
@@ -28,6 +28,11 @@
 .inactive{
   color: rgb(223, 1, 1)
 }
+
+img {
+  width: 270px;
+  height: 270px;
+}
     
 .chatroom .chats{-webkit-box-sizing:border-box;
     box-sizing:border-box;
@@ -45,7 +50,7 @@
     float:left;
     clear:both;
     margin:10px 0;
-    max-width:200px}
+    max-width:500px}
   
   .chatroom .chats .chat.right{
     float:right;clear:both;
