users collection added to firestore

--- a/angular-chat-app/src/app/home/home.component.html
+++ b/angular-chat-app/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <ul>
     <li *ngFor="let item of items | async">
-      {{ item.username }}
+      {{ item.username }} {{item.email}} {{item.status}} {{item.uid}}
     </li>
   </ul>
