--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,9 @@
   <button mat-raised-button routerLink="/login" color="primary" *ngIf="!routeCheck()">
     <mat-icon>account_circle</mat-icon> Login
   </button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+  <button mat-fab color="accent" routerLink="/home" matTooltip="Goto home page" *ngIf="home">
+    <mat-icon>home</mat-icon>
+  </button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <button mat-fab color="accent" routerLink="/home/group" matTooltip="Create a new group" *ngIf="routeCheck()">
     <mat-icon>group</mat-icon>
   </button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
