--- a/src/app/chat-room/chat-room.component.css
+++ b/src/app/chat-room/chat-room.component.css
@@ -27,5 +27,5 @@
     background-color: aliceblue;
     -webkit-box-sizing:border-box;
     box-sizing:border-box;
-    padding:10px 15px ;margin:0 0 0;
+    padding:10px 15px ;margin:0 0 5px;
 }
